@@ -1,5 +1,7 @@
 package com.teamscale.tia;
 
+import com.teamscale.client.EReportFormat;
+import com.teamscale.report.compact.TeamscaleCompactCoverageReport;
 import com.teamscale.report.testwise.model.TestwiseCoverageReport;
 import com.teamscale.test.commons.SystemTestUtils;
 import com.teamscale.test.commons.TeamscaleMockServer;
@@ -19,7 +21,7 @@ public class TestwiseCoverageGradleSystemTest {
 	@BeforeEach
 	public void startFakeTeamscaleServer() throws Exception {
 		teamscaleMockServer = new TeamscaleMockServer(SystemTestUtils.TEAMSCALE_PORT)
-				.acceptingReportUploads();
+				.acceptingReportUploads().withImpactedTests("com/example/app/MainTest/testMain()");
 	}
 
 	@AfterEach
@@ -28,16 +30,74 @@ public class TestwiseCoverageGradleSystemTest {
 	}
 
 	@Test
-	public void testGradleTestwiseCoverageUpload() throws Exception {
-		SystemTestUtils.runGradle("gradle-project", "clean", "tiaTests", "teamscaleReportUpload", "--no-daemon");
+	public void testGradleAggregatedTestwiseCoverageUploadWithoutJVMTestSuite() throws Exception {
+		SystemTestUtils.runGradle("gradle-project", "clean", "teamscaleSystemTestReportUpload");
 
-		assertThat(teamscaleMockServer.uploadedReports).hasSize(2);
+		assertThat(teamscaleMockServer.uploadedReports).hasSize(1);
+		assertThat(teamscaleMockServer.uploadedReports).allMatch(
+				report -> report.getPartition().equals("System Tests") && report.getFormat()
+						.equals(EReportFormat.TESTWISE_COVERAGE.name()));
+
+		TestwiseCoverageReport testwiseReport = teamscaleMockServer.parseUploadedTestwiseCoverageReport(0);
+		assertThat(testwiseReport.partial).isEqualTo(false);
+		assertThat(testwiseReport.tests.getFirst().uniformPath).isEqualTo("com/example/app/MainTest/testMain()");
+		assertThat(testwiseReport.tests.getLast().uniformPath).isEqualTo("com/example/lib/CalculatorTest/testAdd()");
+		assertThat(testwiseReport.tests.getFirst().paths).isNotEmpty();
+		assertThat(testwiseReport.tests.getLast().paths).isNotEmpty();
+	}
+
+	@Test
+	public void testGradleAggregatedTestwiseCoverageUploadHasPartialFlagSet() throws Exception {
+		SystemTestUtils.runGradle("gradle-project", "clean",
+				"systemTest", "-Dimpacted",
+				"teamscaleSystemTestReportUpload");
+
+		assertThat(teamscaleMockServer.uploadedReports).hasSize(1);
+		assertThat(teamscaleMockServer.uploadedReports).allMatch(
+				report -> report.getPartition().equals("System Tests") && report.getFormat()
+						.equals(EReportFormat.TESTWISE_COVERAGE.name()));
+
+		TestwiseCoverageReport testwiseReport = teamscaleMockServer.parseUploadedTestwiseCoverageReport(0);
+		assertThat(testwiseReport.partial).isEqualTo(true);
+		assertThat(testwiseReport.tests.getFirst().uniformPath).isEqualTo("com/example/app/MainTest/testMain()");
+		assertThat(testwiseReport.tests.getLast().uniformPath).isEqualTo("com/example/lib/CalculatorTest/testAdd()");
+		assertThat(testwiseReport.tests.getFirst().paths).isNotEmpty();
+		assertThat(testwiseReport.tests.getLast().paths).isEmpty();
+	}
+
+	@Test
+	public void testGradleAggregatedCompactCoverageUploadWithoutJVMTestSuite() throws Exception {
+		SystemTestUtils.runGradle("gradle-project", "clean", "unitTest", "teamscaleUnitTestReportUpload");
+
+		assertThat(teamscaleMockServer.uploadedReports).hasSize(3);
 		assertThat(teamscaleMockServer.uploadedReports).allMatch(report -> report.getPartition().equals("Unit Tests"));
+		assertThat(teamscaleMockServer.uploadedReports.getFirst().getFormat()).isEqualTo(
+				EReportFormat.TEAMSCALE_COMPACT_COVERAGE.name());
+		assertThat(teamscaleMockServer.uploadedReports.stream()
+				.filter(report -> EReportFormat.JUNIT.name().equals(report.getFormat())).count()).isEqualTo(2);
 
-		TestwiseCoverageReport unitTestReport = teamscaleMockServer.parseUploadedTestwiseCoverageReport(0);
-		assertThat(unitTestReport.tests.get(0).uniformPath).isEqualTo("org/example/Test1/test1()");
-		unitTestReport = teamscaleMockServer.parseUploadedTestwiseCoverageReport(1);
-		assertThat(unitTestReport.tests.get(0).uniformPath).isEqualTo("org/example/Test2/test2()");
+		TeamscaleCompactCoverageReport compactReport = teamscaleMockServer.parseUploadedCompactCoverageReport(0);
+		assertThat(compactReport.getCoverage().getFirst().getFilePath()).isEqualTo("com/example/app/Main.java");
+		assertThat(compactReport.getCoverage().getLast().getFilePath()).isEqualTo("com/example/lib/Calculator.java");
+		assertThat(compactReport.getCoverage().getFirst().getFullyCoveredLines()).containsExactly(7, 8, 9);
+		assertThat(compactReport.getCoverage().getLast().getFullyCoveredLines()).containsExactly(3, 6, 16);
+	}
+
+	@Test
+	public void testGradleAggregatedCompactCoverageUploadWithJVMTestSuite() throws Exception {
+		SystemTestUtils.runGradle("gradle-project", "clean", "teamscaleTestReportUpload");
+
+		assertThat(teamscaleMockServer.uploadedReports).hasSize(3);
+		assertThat(teamscaleMockServer.uploadedReports.stream()
+				.filter(report -> EReportFormat.JUNIT.name().equals(report.getFormat())).count()).isEqualTo(2);
+		assertThat(teamscaleMockServer.uploadedReports).allMatch(
+				report -> report.getPartition().equals("Default Tests"));
+
+		TeamscaleCompactCoverageReport compactReport = teamscaleMockServer.parseUploadedCompactCoverageReport(0);
+		assertThat(compactReport.getCoverage().getFirst().getFilePath()).isEqualTo("com/example/app/Main.java");
+		assertThat(compactReport.getCoverage().getLast().getFilePath()).isEqualTo("com/example/lib/Calculator.java");
+		assertThat(compactReport.getCoverage().getFirst().getFullyCoveredLines()).containsExactly(7, 8, 9);
+		assertThat(compactReport.getCoverage().getLast().getFullyCoveredLines()).containsExactly(3, 6, 16);
 	}
 
 }
